# gearc

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  LEAME  LICENCIA  TODO  gearc.kdev4
cmake/: FindGettext.cmake  cmake_uninstall.cmake.in
doc/doxygen/: doxygen-gearc.css
plantillas/: CMakeList.template  cpp  h
scripts/: codingstyle.sh
src/: CMakeLists.txt  GEARC.dox  GEARC_MainWindow.cpp  GEARC_MainWindow.h  GEARC_MainWindow.ui  GMainWindow.cpp  GMainWindow.h  GMainWindow.ui  Gi18n.cpp  Gi18n.h  directorios.dox  gearc.cpp  gearc.h  gearc.ui  licencia.dox  main.cpp
src/archivos/: GLecturaGrc.cpp  GLecturaGrc.h
src/notas/: GNotasWindow.cpp  GNotasWindow.h  GNotasWindow.ui  Gnota.cpp  Gnota.h  Gvalidador.cpp  Gvalidador.h  gestor_notas.cpp  gestor_notas.h  gestor_notas.ui
src/ramos/: GListaRamos.cpp  GListaRamos.h  GRamo.cpp  GRamo.h
src/recursos/: INFORMACION  gearc.desktop  recursos.qrc
